# pygorpho

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakeSettings.json  LICENSE.txt  README.md  linuxpup.sh  pygorpho.cu  pygorpho.cuh  setup.py  winpub.bat
docs/: Makefile  api-doc.rst  conf.py  index.rst  installation.rst  license.rst  make.bat  modules.rst  pygorpho.rst
docs/modules/: constants.rst  cuda.rst  flat.rst  gen.rst  strel.rst
pygorpho/: __init__.py  _thin.py  constants.py  cuda.py  flat.py  flatlin.py  gen.py  strel.py
src/: pygorpho.cu  pygorpho.cuh
src/pygorpho/: __init__.py  _thin.py  constants.py  cuda.py  flat.py  gen.py  strel.py
tests/: test_flat.py  test_flat_linear.py  test_gen.py
